fixed spacing

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -202,7 +202,7 @@ a {
     grid-template-columns: 1fr 1fr 1fr;
 }
 #faq-msg{
-    padding: 100px;
+    padding: 75px;
     padding-top: 0px;
     grid-column: 2/4;
 }
@@ -210,6 +210,7 @@ a {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     padding-top: 300px;
+    padding-left: 50px;
 }
 #top-img{
     width: 100%;
